--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,3 +128,71 @@ aside {
   background-color: #f1f4f8;
   border-radius: 8px;
 }
+.footer1 {
+  display: flex;
+  flex-direction: row;
+  background-color: #f5f5f5;
+  align-items: center;
+  gap: 20px;
+  width: 100%;
+  padding-left: 12%;
+  padding-right: 12%;
+  height: 40px;
+  vertical-align: baseline;
+  color: gray;
+}
+.footer2 {
+  display: flex;
+  flex-direction: row;
+  background-color: #ebebeb;
+  align-items: center;
+  gap: 20px;
+  width: 100%;
+  padding-left: 12%;
+  padding-right: 12%;
+  height: 35px;
+  vertical-align: baseline;
+  color: gray;
+  font-size: 12px;
+}
+.footer3 {
+  display: flex;
+  flex-direction: row;
+  background-color: #ffff;
+  align-items: center;
+  gap: 100px;
+  width: 100%;
+  padding-left: 12%;
+  padding-right: 12%;
+  color: gray;
+}
+.social {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  background-color: #ffff;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+  padding-left: 12%;
+  padding-right: 12%;
+  color: gray;
+}
+h5 {
+  font-weight: 100;
+  margin-bottom: -5px;
+}
+.footer4 {
+  background-color: #ffff;
+  align-items: center;
+  gap: 100px;
+  width: 100%;
+  padding-left: 12%;
+  padding-right: 12%;
+  padding-bottom: 20px;
+  color: gray;
+  margin-top: -10px;
+  font-size: 12px;
+  text-align: center;
+}
